# VirtualFS

./: CMakeLists.txt  CMakeSettings.json  README.md
include/: archive.h  archive_entry.h
lib/: bz2.lib  lz4.lib  lzma.lib  z.lib  zstd.lib
lib/pkgconfig/: libarchive.pc  libcrypto.pc  liblzma.pc  libssl.pc  openssl.pc
src/: main.cpp
src/core/: VirtualDiskManager.cpp  VirtualDiskManager.h
src/fs/: fs_bridge.cpp  fs_bridge.h  passthrough.cpp  virtual_disk.cpp  virtual_disk.h
src/iso/: Extractor.cpp  Extractor.h  IsoReader.cpp  IsoReader.h
src/ui/: MainWindow.cpp  MainWindow.h
